--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "book-management",
   "version": "1.0.0",
-  "description": "A book management backend system",
-  "main": "index.ts",
+  "description": "Book management backend system",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.ts",
+    "dev": "nodemon server.ts"
   },
   "author": "Gaurav Chandrakar",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-async-handler": "^1.2.0"
+    "express-async-handler": "^1.2.0",
+    "sequelize": "^6.32.1"
   }
 }
